--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/*
+ AUTOR: SLIVADRIP
+
+*/
 h2{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 5rem;
